<resources>
    <string name="app_name">Natalia</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="dev_name">%1s %2s</string>
    <string name="dev_summary">&lt;b>Summary&lt;/b> &lt;br/>&lt;br/>%1s</string>
    <string name="dev_highlights">&lt;b>Highlights&lt;/b> &lt;br/>&lt;br/>%1s</string>
    <string name="dev_contact">Contact\n</string>
    <string name="mail_subject">Android Development</string>
    <string name="projects">Projects</string>
    <string name="education">Education</string>
    <string name="work">Work</string>

    <string name="education_problem">There is problem with displaying education.</string>
    <string name="education_field_at_school">%1s at %2s</string>
    <string name="education_image_id_name">edu_%1d</string>
    <string name="education_image_id">R.drawable.%1s</string>

    <string name="project_all">All</string>
    <string name="project_own">Own</string>
    <string name="project_commercial">Commercial</string>
    <string name="project_opens">Open Source</string>
    <string name="project_other">Other</string>
    <string name="no_projects">No %1s projects uploaded yet.</string>
    <string name="commercial_project_at">at %1s</string>
    <string name="project_type">Project type: %1s</string>
    <string name="development_started">Started: %1s</string>
    <string name="description">Description</string>
    <string name="tech">Tech</string>
    <string name="links">Links</string>
    <string name="anim_proj_title" translatable="false">Project Title anim</string>
    <string name="anim_proj_image" translatable="false">Project Image anim</string>
    <string name="project_image_id_name">proj_%1d</string>
    <string name="project_image_id">R.drawable.%1s</string>

    <string name="work_at">at %1s</string>

    <string name="cd_go_to_playstore">Go to PlayStore</string>
    <string name="cd_go_to_github">Go to GitHub</string>

    <string name="menu_portfolio_web">Portfolio Web</string>
    <string name="portfolio_address">http://napcode.eu/natalia</string>
    <string name="menu_resume_pdf">Resume Pdf</string>
    <string name="resume_pdf">http://napcode.eu/static/natalia-portfolio/resume.pdf</string>

    <string name="dev_skills">Top Skills</string>

</resources>
