<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/projectDetailsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:title="@null">

                <TextView
                    android:id="@+id/appBarProjectTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/appbarTitleSize"
                    tools:text="@tools:sample/lorem"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/projectImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:src="@drawable/ic_project_placeholder"
            android:transitionName="@string/anim_proj_image"
            app:layout_constraintLeft_toRightOf="@id/leftGuideline"
            app:layout_constraintRight_toLeftOf="@id/imageGuideline"
            app:layout_constraintTop_toBottomOf="@id/topGuideline"/>

        <TextView
            android:id="@+id/projectTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:textSize="@dimen/secondaryHeaderTextSize"
            android:transitionName="@string/anim_proj_title"
            app:layout_constraintLeft_toRightOf="@id/imageGuideline"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toTopOf="@id/projectImageView"
            tools:text="@tools:sample/lorem"/>

        <TextView
            android:id="@+id/projectStartDateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/projectTitleTextView"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/projectTitleTextView"
            tools:text="@tools:sample/lorem"/>

        <!--TODO change to chips-->
        <TextView
            android:id="@+id/projectTypeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/projectTitleTextView"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/projectStartDateTextView"
            tools:text="@tools:sample/lorem"/>

        <TextView
            android:id="@+id/projectCompanyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/projectTitleTextView"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/projectTypeTextView"
            tools:text="@tools:sample/lorem"
            tools:visibility="visible"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/playStoreFAB"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:contentDescription="@string/cd_go_to_playstore"
            android:src="@drawable/ic_playstore"
            android:tint="@android:color/white"
            android:visibility="gone"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/projectCompanyTextView"
            tools:visibility="visible"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/githubFAB"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:contentDescription="@string/cd_go_to_playstore"
            android:src="@drawable/ic_github"
            android:tint="@android:color/white"
            android:visibility="gone"
            app:layout_constraintRight_toLeftOf="@id/playStoreFAB"
            app:layout_constraintTop_toBottomOf="@id/projectCompanyTextView"
            tools:visibility="visible"/>

        <View
            android:id="@+id/baseSectionDividerView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/base_margin"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/leftGuideline"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/baseSectionBarrier"/>

        <TextView
            android:id="@+id/descriptionLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/baseSectionDividerView"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/leftGuideline"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/descriptionLabelTextView"
            tools:text="@tools:sample/lorem"/>

        <TextView
            android:id="@+id/techLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/tech"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"/>

        <android.support.design.chip.ChipGroup
            android:id="@+id/techChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/leftGuideline"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/techLabelTextView"/>

        <TextView
            android:id="@+id/linksLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/links"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/techChipGroup"
            tools:visibility="visible"/>

        <android.support.constraint.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/base_margin"/>

        <android.support.constraint.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/base_margin"/>

        <android.support.constraint.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="?android:attr/actionBarSize"/>

        <android.support.constraint.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/base_margin"/>

        <android.support.constraint.Guideline
            android:id="@+id/imageGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35"/>

        <android.support.constraint.Barrier
            android:id="@+id/baseSectionBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="githubFAB,playStoreFAB,projectImageView"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>